log
Sun 19 Mar 2023 04:05:24 PM UTC: 
 tests:  0|6
total_score: 0/70
191a703
Sun 19 Mar 2023 06:05:46 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d200806
Tue 21 Mar 2023 12:57:49 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
3556c35
Tue 21 Mar 2023 05:37:31 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
f776ffb
Tue 21 Mar 2023 05:38:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2d44039
Tue 21 Mar 2023 05:40:28 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
b44964c
Tue 21 Mar 2023 05:41:28 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1006e14
Tue 21 Mar 2023 05:44:06 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
97fcef1
Tue 21 Mar 2023 05:47:39 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|5
total_score: 15/70
158f6d7
Tue 21 Mar 2023 05:48:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e9a9e12
Tue 21 Mar 2023 05:48:29 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
2ce804f
Tue 21 Mar 2023 05:49:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8f33e49
Tue 21 Mar 2023 05:50:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5096703
Tue 21 Mar 2023 05:51:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dd6f79c
Tue 21 Mar 2023 05:53:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b838ad
Tue 21 Mar 2023 05:55:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bd54dba
Tue 21 Mar 2023 05:56:11 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
beac258
Tue 21 Mar 2023 06:03:59 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
27e2a41
Tue 21 Mar 2023 06:07:40 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
53a2f1d
Tue 21 Mar 2023 06:09:34 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
854fecf
Tue 21 Mar 2023 06:10:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
781ec73
Tue 21 Mar 2023 04:08:50 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
24dc871
Tue 21 Mar 2023 04:11:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8622975
Tue 21 Mar 2023 04:12:42 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:50: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   90 |   if (list == NULL || list->head == NULL) return NULL;
      |                                                  ^~~~
list.c:87:6: note: declared here
   87 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1ba99f9
Tue 21 Mar 2023 04:18:43 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
288a1a5
Tue 21 Mar 2023 04:19:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
1a5bed7
Tue 21 Mar 2023 05:25:56 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
d69eba8
Tue 21 Mar 2023 05:28:47 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ff52fd1
Tue 21 Mar 2023 05:31:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
be18b61
Tue 21 Mar 2023 05:33:12 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
3e245d6
Tue 21 Mar 2023 05:52:46 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
f6f58bf
Tue 21 Mar 2023 05:58:28 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
6a9410a
Tue 21 Mar 2023 06:12:40 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
7c0968a
Tue 21 Mar 2023 06:37:52 PM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  11|1
total_score: 55/70
56341c7
Wed 22 Mar 2023 01:48:02 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
4b79865
Wed 22 Mar 2023 01:49:02 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
0578d76
